--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</div>
 					</div>
 					<div class="item-form">
-					<button class="button mailing" type="button">Отправить</button>
+					<button class="button mailing" type="submit">Отправить</button>
 					</div>
 				</form>
 				</div>	
@@ -394,7 +394,9 @@
 							<div class="excerp-wrap">
 								<h3 class="title title-article"><a href="#" class="link-title-excerpt">подушки на диван</a></h3>
 								<div class="excerpt">
-								Набор из двух подушек с модными принтами. Видео о создании <a href="#" class="excerpt-link">здесь</a>.
+									<p>
+										Набор из двух подушек с модными принтами. Видео о создании <a href="#" class="excerpt-link">здесь</a>.
+									</p>
 								</div>
 							</div>
 							<div class="action">
@@ -418,8 +420,11 @@
 							<div class="excerp-wrap">
 							<h3 class="title title-article"><a href="#" class="link-title-excerpt">Кукла «Зайчик»</a></h3>
 							<div class="excerpt">
-								Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена 
-								<a href="#" class="excerpt-link">весенняя серия постов</a> в блоге и несколько подкастов.
+								<p>
+									Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена 
+									<a href="#" class="excerpt-link">весенняя серия постов</a> в блоге и несколько подкастов.
+								</p>
+								
 							</div>
 						</div>
 						<div class="action">
@@ -442,8 +447,10 @@
 						<div class="excerp-wrap">
 							<h3 class="title title-article"><a href="#" class="link-title-excerpt">Шестиугольная рамка</a></h3>
 							<div class="excerpt">
-								Необычная рамка для украшения дома из видео <a href="#" class="excerpt-link">«Как сделать рамку из
-								подручных средств за 30 минут»</a>.
+								<p>
+									Необычная рамка для украшения дома из видео <a href="#" class="excerpt-link">«Как сделать рамку из
+									подручных средств за 30 минут»</a>.
+								</p>
 							</div>
 						</div>
 						<div class="action">
